cluster-resources/nettools-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nettools
  annotations:
    linkerd.io/inject: enabled
