cluster-resources/pitstop-production-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pitstop-production
  annotations:
    linkerd.io/inject: enabled
