cluster-resources/platform-production-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-production
  annotations:
    linkerd.io/inject: enabled
