cluster-resources/ra-prod-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ra-production-techradar
  annotations:
    linkerd.io/inject: enabled
