cluster-resources/sites-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sites
  annotations:
    linkerd.io/inject: enabled
